# 2020-bitl-workspace-cpp

./: .gitignore  Makefile  Palindromes.cpp  Palindromes.h  test01expected.txt  test02expected.txt
ex01-periodic/: CMakeLists.txt  Makefile  Periodic.cpp  Periodic.h  PeriodicMain.cpp  ex01periodic  test.js  test.txt  test01expected.txt  test01in.txt  test02in.txt  test02out.txt  test03expected.txt  test03in.txt  test03out.txt
ex02-find-extremes/: ExtremesMain.cpp  Student.cpp  Student.h  test1expected.txt  test1in.txt  test2expected.txt  test2in.txt  test3expected.txt  test3in.txt  test4in.txt
ex03-alice/: AliceMain.cpp  Makefile  Node.cpp  Node.h  test01in.txt  test04expected.txt  test04in.txt  test05expected.txt  test05in.txt  test06expected.txt  test06in.txt  test07expected.txt  test07in.txt  test1expected.txt  test2in.txt
ex04-matrices/: Makefile  MatricesMain.cpp  Matrix.h  Ratio.h  input.txt  test1expected.txt  test1in.txt  test1out.txt  test2expected.txt  test2in.txt  test3expected.txt  test3in.txt  test4in.txt  test5in.txt  test6expected.txt  test6in.txt  test7expected.txt  test7in.txt
ex05-circle-list/: CNode.h  Catch2TestRunner.cpp  CircleList.cpp  CircleList.h  CircleListMain.cpp  Makefile  OutOfBoundsException.cpp  main  (+11 more)
ex06-shapes/: CMakeLists.txt  Circle.cpp  Circle.h  Group.cpp  Group.h  Makefile  Matrix.h  Polygon.cpp  Polygon.h  Shape.h  ShapeStack.cpp  ShapeStack.h  ShapesMain.cpp  Transformation.h  test1in.txt  test2in.txt
ex06-shapes/tests/: test01in.txt  test02in.txt  test04in.txt  test11in.txt  test12in.txt  test13in.txt  test14in.txt
(+53 files in other folders)
